# dandrum

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  coverage-allowlist.txt
.githooks/: pre-commit  pre-push
docs/: routing-diagnostics.md
examples/patches/: composite-drum-voice.yaml  composite-echo.yaml  composite-hidden-internals.yaml  composite-reverb.yaml  control-mixer-modulation.yaml  delayed-feedback.yaml  echo-demo.yaml  minimal-event-osc-vca.yaml  minimal-sampler.yaml  minimal-tune.yaml  polyphonic-chords.yaml  polyphonic-pad.yaml  polyphonic-sampler-chords.yaml  reverb-demo.yaml  short-tune-with-delay.yaml
openspec/archive/2026-06-28-add-polyphony/: design.md
openspec/archive/2026-06-29-headless-modular-instrument-engine/: design.md  proposal.md
openspec/archive/2026-06-29-headless-modular-instrument-engine/specs/built-in-modules/: spec.md
openspec/archive/2026-06-29-headless-modular-instrument-engine/specs/feedback-routing/: spec.md
openspec/archive/add-sampler/: design.md  proposal.md  tasks.md
openspec/archive/compiled-patch/: design.md  tasks.md
openspec/archive/compiled-patch-render-parity/: proposal.md  tasks.md
openspec/archive/compiled-patch/specs/compiled-patch/: spec.md
openspec/archive/compiled-render-dispatch-refactor/: design.md  proposal.md  tasks.md
openspec/archive/compiled-render-dispatch-refactor/specs/compiled-render-dispatch-refactor/: spec.md
openspec/archive/compiled-render-execution-order/: tasks.md
openspec/archive/composite-modules/: proposal.md
openspec/archive/dynamics-module/specs/dynamics-convolution/: spec.md
openspec/archive/dynamics-module/specs/dynamics-processor/: spec.md
openspec/archive/module-audio-processing/: design.md
openspec/archive/realtime-instrument-engine/: design.md  proposal.md  tasks.md
openspec/changes/add-drum-machine-container/: design.md  proposal.md  tasks.md
openspec/changes/add-filter-module/: design.md  proposal.md  tasks.md
openspec/changes/add-instrument-presets/: design.md  proposal.md  tasks.md
openspec/changes/add-polyphony/: proposal.md  tasks.md
openspec/changes/add-sampler/: tasks.md
openspec/changes/compiled-patch/: proposal.md  tasks.md
openspec/changes/compiled-patch-render-parity/: design.md  tasks.md
openspec/changes/compiled-render-execution-order/: design.md  execution-flow.md  proposal.md  tasks.md
openspec/changes/composite-modules/: design.md  tasks.md
openspec/changes/dynamics-module/: design.md  proposal.md  tasks.md
openspec/changes/headless-modular-instrument-engine/: tasks.md
openspec/changes/module-audio-processing/: proposal.md  tasks.md
openspec/changes/realtime-instrument-engine/: tasks.md
openspec/changes/refactor-rust-engine-architecture/: design.md  proposal.md  tasks.md
openspec/changes/reverb-echo-effects/: design.md  proposal.md  tasks.md
openspec/specs/built-in-modules/: spec.md
openspec/specs/feedback-routing/: spec.md
openspec/specs/headless-engine/: spec.md
openspec/specs/modular-routing-graph/: spec.md
openspec/specs/script-modules/: spec.md
openspec/specs/vca-control-routing/: spec.md
openspec/specs/yaml-patch-format/: spec.md
schema/: patch.schema.yaml
scripts/: check-rust-coverage  check-rust-coverage.py
src/juce-wrapper/: Cli.cpp  Cli.h  DefaultPatch.h  Main.cpp  MidiToRustEngine.cpp  MidiToRustEngine.h  RustEngineBindings.h  RustEngineSource.cpp  RustEngineSource.h
src/rust-engine/: Cargo.toml
src/rust-engine/src/: audio_loading.rs  builtins.rs  cli.rs  compiled_patch.rs  convolution.rs  core.rs  crossover.rs  delay_line.rs  dynamics_processor.rs  echo.rs  envelope_detector.rs  ffi.rs  fft.rs  filter.rs  graph.rs  graph_composite.rs  graph_processor.rs  lib.rs  patch.rs  patch_composite.rs  preparation.rs  realtime.rs  reverb.rs  sample.rs  saturator.rs  script.rs  spectral.rs  synth.rs  voice_allocator.rs  wav.rs
src/rust-engine/src/builtins/: module_kind.rs  module_types.rs  tests.rs
src/rust-engine/src/filter/: biquad.rs  comb.rs  mod.rs  moog.rs  one_pole.rs  tests.rs
src/rust-engine/src/graph/: builtin_ports.rs  tests.rs
src/rust-engine/src/graph_processor/: block.rs  dispatch.rs  helpers.rs  input_provider.rs  mod.rs  offline.rs  outputs.rs  polyphony.rs  processing.rs  realtime_graph_processor.rs  routing.rs  state.rs  tests.rs  traversal.rs
tests/cmake/: RealtimeCallbackSafety.cmake
tests/cpp/: RustEngineFfiSmoke.cpp
(+29 files in other folders)
